--- a/sample_docker_static/Dockerfile.static
+++ b/sample_docker_static/Dockerfile.static
@@ -1,6 +1,7 @@
 FROM tianon/true
 EXPOSE 8080
+
 COPY certs /etc/ssl/certs/ca-certificates.crt
 ADD main /
-ENTRYPOINT /main
-EXPOSE 8080
+
+CMD ["/main"]
